--- a/main.kv
+++ b/main.kv
@@ -4,26 +4,85 @@
         size_hint: None, None
 
     DPEAButton:
-        id: test_button
-        text: 'test'
+        id: motor_button
+        text: "motor"
+        size: 100, 100
+        x: root.width * 0.25
+        y:root.height * 0.5
+        color: 1, 0, 0, 1
+        on_press: motor_label.text = root.motor_switch(motor_label.text)
+
+    Label:
+        id: motor_label
+        size_hint: None, None
+        font_size: 20
+        text: 'motor on'
+        center_x: 0.4 * root.width
+        center_y: 0.4 * root.height
+        color: 1, 1, 1, 1
+        bold: True
+        outline_width: self.font_size * 0.1
+        outline_color: 0, 0, 0
+
+    DPEAButton:
+        id: toggle_button
+        text: "on"
+        size: 100, 100
+        x: 0.5 * root.width
+        y: 0.5 * root.height
+        color: 1, 0, 0, 1
+        on_press: self.text = root.switch(self.text)
+
+    DPEAButton:
+        id: counter_button
+        text: "0"
+        size: 100, 100
+        x: 0.5 * root.width
+        y: 0.25 * root.height
+        color: 0, 0, 1, 1
+        on_press: self.text = root.count(self.text)
+
+    Slider:
+        id: slider
+        min: 0
+        max: 100
+        step: 1
+        orientation: 'horizontal'
+
+    Label:
+        id: slider_label
+        size_hint: None, None
+        font_size: 20
+        text: "position"
+        center_x: 0.5 * root.width
+        center_y: 0.45 * root.height
+        color: 1, 1, 1, 1
+        bold: True
+        outline_width: self.font_size * 0.1
+        outline_color: 0, 0, 0
+
+    DPEAButton:
+        id: testbutton
+        text: str(int(slider.value))
         size: 100, 100
         x: root.width * 0.75
         y: root.height * 0.5
         color: 0, 1, 0, 1
         on_press: root.pressed()
 
-    DPEAButton:
-        text: "test2"
-        size: 100, 100
-        x: root.width * 0.25
-        y:root.height * 0.5
-        color: 1, 0, 0, 1
-        on_press: root.pressed()
-
     ImageButton:
-        id: logo_image_button
+        id: exit_image_button
+        source: "../../pidev/kivy/images/DPEALogoTransparent.png"
+        size: 100, 100
+        x: root.width * 0.9
+        y: root.height * 0.9
+        on_press: root.exit()
+
+<ImageScreen>:
+    ImageButton:
+        id: return_image_button
         source: "../../pidev/kivy/images/DPEALogoTransparent.png"
         size: 100, 100
         x: root.width * 0.5
         y: root.height * 0.5
-        on_press: root.pressed()
+        on_press: root.ret()
