--- a/main.kv
+++ b/main.kv
@@ -1,5 +1,6 @@
 <MainScreen>:
     name: 'main'
+    on_enter: root.start_joy_thread()
     FloatLayout:
         size_hint: None, None
 
@@ -7,9 +8,10 @@
         id: slider
         min: 0
         max: 100
+        size_hint: 0.5, None
         step: 1
         size: 400, 30
-        center_y: 0
+        center_y: 1000
         font_size: 20
         orientation: 'horizontal'
 
@@ -52,10 +54,30 @@
         on_press: self.text = root.count(self.text)
 
     Label:
-        id: slider_label
+        id: joy_pos_label
+        text: "joy pos"
         size_hint: None, None
         font_size: 20
-        text: "position"
+        color: 1, 1, 1, 1
+        bold: True
+        outline_width: self.font_size * 0.1
+        outline_color: 0, 0, 0
+
+    Label:
+        id: all_butts_label
+        size_hint: None, None
+        font_size: 20
+        center_x: 0.9 * root.width
+        center_y: 0.5 * root.height
+        color: 1, 1, 1, 1
+        bold: True
+        outline_width: self.font_size * 0.1
+        outline_color: 0, 0, 0
+
+    Label:
+        id: joystick_label
+        size_hint: None, None
+        font_size: 20
         center_x: 0.5 * root.width
         center_y: 0.45 * root.height
         color: 1, 1, 1, 1
@@ -78,7 +100,7 @@
         size: 100, 100
         x: root.width * 0.9
         y: root.height * 0.9
-        on_press: root.exit()
+        on_press: root.exit(self)
 
 <ImageScreen>:
     ImageButton:
@@ -87,4 +109,4 @@
         size: 100, 100
         x: root.width * 0.5
         y: root.height * 0.5
-        on_press: root.ret()
+        on_press: root.ret(self)
